src/test/deca/syntax/valid/synt/printlnx2.deca
// Description:
//    Programme pour teste printlnx
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022

{
    float a,b;
    printlnx(a,b);
}
